<resources>
    <string name="app_name">Firebase Database</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>

    <string name="camera_button_text">Upload</string>

    <string name="sign_in_prompt">Sign In to begin</string>

    <string name="take_photo_prompt">Upload a Photo</string>

    <string name="download">Download</string>

    <string name="sign_in_anonymously">Sign In</string>

    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>

    <string name="label_link">Link to Uploaded File</string>

    <string name="label_download">Download File</string>

    <string name="log_out">Log out</string>
    <string name="success">Success</string>


    <string name="progress_downloading">Downloading…</string>

    <string name="progress_uploading">Uploading…</string>

    <string name="progress_auth">Signing In…</string>


    <string name="upload_success">Upload finished</string>

    <string name="upload_failure">Upload failed</string>

    <string name="download_success">Download finished</string>

    <string name="download_failure">Download failure</string>

    <string name="title_activity_main">Current Location in Google Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_new_post2">NewPost2Activity</string>
    <string name="title_show_resouces">Show Images</string>

</resources>
