<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="com.malamteam.firebasetocrm.UploadResource2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/firebase_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_2"
            android:src="@drawable/firebase_lockup_400" />

        <LinearLayout
            android:id="@+id/layout_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="gone">

            <TextView
                android:id="@+id/status_sign_in"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:text="@string/sign_in_prompt" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_anonymously" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:text="@string/take_photo_prompt" />

            <Button
                android:id="@+id/button_camera"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/camera_button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_2"
                android:text="@string/label_link" />

            <TextView
                android:id="@+id/picture_download_uri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="http://www.example.com/?id=UAOJNVKBMQUGPYZKCQZRZKJEXRCRXMRSMFBZBMBODWUSVTDXJCPJMYOKQQBODSGPYHPZUR" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_2"
                android:text="@string/label_download" />

            <Button
                android:id="@+id/button_download"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/download" />
            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/material_design_android_floating_action_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                fab:menu_animationDelayPerItem="55"
                fab:menu_backgroundColor="@android:color/transparent"
                fab:menu_buttonSpacing="0dp"
                fab:menu_colorNormal="#da3c2f"
                fab:menu_colorPressed="#dc4b3f"
                fab:menu_colorRipple="#99d4d4d4"
                fab:menu_fab_label="Floating Action Menu"
                fab:menu_fab_size="normal"
                fab:menu_icon="@drawable/fab_add"
                fab:menu_labels_colorNormal="#333"
                fab:menu_labels_colorPressed="#444"
                fab:menu_labels_colorRipple="#66efecec"
                fab:menu_labels_cornerRadius="3dp"
                fab:menu_labels_ellipsize="none"
                fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
                fab:menu_labels_margin="0dp"
                fab:menu_labels_maxLines="-1"
                fab:menu_labels_padding="8dp"
                fab:menu_labels_position="left"
                fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
                fab:menu_labels_showShadow="true"
                fab:menu_labels_singleLine="false"
                fab:menu_labels_textColor="#f2f1f1"
                fab:menu_labels_textSize="15sp"
                fab:menu_openDirection="up"
                fab:menu_shadowColor="#66aff198"
                fab:menu_shadowRadius="4dp"
                fab:menu_shadowXOffset="1dp"
                fab:menu_shadowYOffset="4dp"
                fab:menu_showShadow="true">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/material_design_floating_action_menu_commit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_photo"
                    fab:fab_label="Commit"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/material_design_floating_action_menu_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_edit"
                    fab:fab_label="Cancel"
                    fab:fab_size="mini" />
            </com.github.clans.fab.FloatingActionMenu>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
